--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="main.js" defer></script>
 </head>
 <body>
+    <div class="heading">
+        <h1>Etch-A-Sketch</h1>
+        <button>Change grid size</button>
+    </div>
     <div id="container"></div>
 </body>
 </html>
